# gitHelper-tauri

./: .env.example  .gitignore  README.md  index.html  install-chinese.bat  package.json  pnpm-lock.yaml  vite.config.ts
.augment/rules/: rule.md
public/: splash-simple.html  splashscreen.html
scripts/: version-manager.cjs
src/: App.vue  main.ts  style.css  style.scss
src-tauri/: Cargo.toml  build.rs  chinese.nsh  installer.nsi  installer.wxs  license.rtf  license.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: config.rs  lib.rs
src/api/: deepseek.ts  oa.ts  updater.ts
src/components/: AboutPage.vue  AddReportModal.vue  HomeTabs.vue  LoginModal.vue  OA.vue  OALogin.vue  OAProjectSelector.vue  OASystem.vue  ProjectManager.vue  ReportList.vue  SettingsPanel.vue  SummarizationPanel.vue  TitleBar.vue  UpdateModal.vue
src/utils/: tauri-http-client.ts
