[package]
name = "workHelper"
version = "0.0.2"
description = "一个方便公司提交与修改OA日报周报的管理工具"
authors = ["Msg-Lbo <msglbo@foxmail.com>"]
license = "MIT"
repository = "https://github.com/Msg-Lbo/workHelper-tauri"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tokio = { version = "1.0", features = ["full"] }
encoding_rs = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
base64 = "0.21"
dirs = "5.0"
dotenv = "0.15"
